--- a/spec/fixtures/vcr/pinecone/index_url.yml
+++ b/spec/fixtures/vcr/pinecone/index_url.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://controller.<PINECONE_ENVIRONMENT>.pinecone.io/collections
+    uri: https://controller.<PINECONE_ENVIRONMENT>.pinecone.io/databases/roseflow-test
     body:
       encoding: US-ASCII
       string: ''
@@ -23,17 +23,17 @@ http_interactions:
       Content-Type:
       - application/json; charset=UTF-8
       Date:
-      - Mon, 01 May 2023 12:25:23 GMT
+      - Mon, 01 May 2023 09:27:03 GMT
       X-Envoy-Upstream-Service-Time:
-      - '26'
+      - '6'
       Content-Length:
-      - '19'
+      - '259'
       Server:
       - envoy
     body:
       encoding: UTF-8
-      string: '["new-collection"]
+      string: '{"database":{"name":"roseflow-test","metric":"cosine","dimension":3,"replicas":1,"shards":1,"pods":1,"pod_type":"s1.x1"},"status":{"waiting":[],"crashed":[],"host":"roseflow-test-1601616.svc.<PINECONE_ENVIRONMENT>.pinecone.io","port":433,"state":"Ready","ready":true}}
 
         '
-  recorded_at: Mon, 01 May 2023 12:25:23 GMT
+  recorded_at: Mon, 01 May 2023 09:27:03 GMT
 recorded_with: VCR 6.1.0
