--- a/spec/fixtures/vcr/pinecone/vectors/query/with_object.yml
+++ b/spec/fixtures/vcr/pinecone/vectors/query/with_object.yml
@@ -25,17 +25,17 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 26 Apr 2023 19:22:36 GMT
+      - Mon, 01 May 2023 12:24:59 GMT
       X-Envoy-Upstream-Service-Time:
-      - '2'
+      - '1'
       Grpc-Status:
       - '0'
       Content-Length:
-      - '260'
+      - '348'
       Server:
       - envoy
     body:
       encoding: UTF-8
-      string: '{"results":[],"matches":[{"id":"3","score":1.00000012,"values":[]},{"id":"bar","score":-0.0805823,"values":[]},{"id":"foo","score":-0.188982248,"values":[]},{"id":"1","score":-0.188982248,"values":[]},{"id":"2","score":-0.50000006,"values":[]}],"namespace":""}'
-  recorded_at: Wed, 26 Apr 2023 19:22:36 GMT
+      string: '{"results":[],"matches":[{"id":"3","score":1.00000012,"values":[]},{"id":"xyz","score":0.13130644,"values":[]},{"id":"bar","score":-0.0805823,"values":[]},{"id":"5","score":-0.181874081,"values":[]},{"id":"foo","score":-0.188982248,"values":[]},{"id":"1","score":-0.188982248,"values":[]},{"id":"2","score":-0.50000006,"values":[]}],"namespace":""}'
+  recorded_at: Mon, 01 May 2023 12:25:00 GMT
 recorded_with: VCR 6.1.0
